# elit

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  build.sh  elit-demo.py  index.html  pos-model.gln  pos-model.pkl  requirements.docs.txt  requirements.readthedocs.txt  requirements.txt  rsync.sh  sample.txt  searchindex.js  setup.cfg  setup.py  tutorial.html  util.py
_sources/: index.txt
cpp/: CMakeLists.txt  io_utils.cpp  string_utils.cpp  string_utils.hpp
cpp/tokenizer/: README.md  english_tokenizer.cpp  english_tokenizer.hpp  english_tokenizer_py.cpp  english_tokenizer_test.cpp  token_utils.cpp  token_utils.hpp
demo/: cnn_demo.py  elit_demo.py  hyperopt_demo.py  input_matrix.py  iparser_dep.py  iparser_pos.py  parse_tsv.py  tmp.py
demos/: decode_demo.py  decode_demo_web.py  sentiment_demo.py
docs/: Makefile  all-about-me.rst  apidocs.rst  apidocs.rst.bak  conf.py  embedding.rst  index.rst  installation.md  make.bat  tutorial.rst
elit/: __init__.py  api.py  benchmark.py  cli.py  component.py  config.py  configuration.py  configure.py  data.py  dataset.py  decode.py  doc_classifier.py  embedding.py  eval.py  iterator.py  lemmatizer.py  (+21 more)
elit/tokenizer/: CMakeLists.txt  _tokenizer_module.cpp  english_tokenizer.cpp  global_const.h  io_utils.cpp  main.cpp  string_utils.cpp  tokenizer.cpp  tokenizer.hpp  tokenizer.i  tokenizer.py
elit/tokenizer/src/: Makefile  _tokenizer_module.cc  _tokenizer_module.cpp  tokenizer.cc  tokenizer.cpp  tokenizer.hh  tokenizer.hpp  tokenizer.i  tokenizer.py
(+615 files in other folders)
